[tool.poetry]
name = "tiny-wifi-analyzer"
version = "0.2.0rc1"
description = "A tiny Wi-Fi analyzer for macOS"
authors = ["nolze <nolze@int3.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
pywebview = "~3.7"
pyobjc-core = "~9.2"
pyobjc-framework-cocoa = "~9.2"
pyobjc-framework-CoreWLAN = "~9.2"
pyobjc-framework-WebKit = "~9.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
