[tool.poetry]
name = "tiny-wifi-analyzer"
version = "0.3.0rc1"
description = "A tiny Wi-Fi analyzer for macOS"
authors = ["nolze <nolze@int3.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
pywebview = "~3.7"
pyobjc-core = "~10.0"
pyobjc-framework-cocoa = "~10.0"
pyobjc-framework-CoreWLAN = "~10.0"
pyobjc-framework-WebKit = "~10.0"
pyobjc-framework-corelocation = "^10.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
