[tool.poetry]
name = "tiny-wifi-analyzer"
version = "0.4.1rc1"
description = "A tiny Wi-Fi analyzer for macOS"
authors = ["nolze <nolze@int3.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
pywebview = "~5"
pyobjc-core = "~11.0"
pyobjc-framework-cocoa = "~11.0"
pyobjc-framework-CoreWLAN = "~11.0"
pyobjc-framework-WebKit = "~11.0"
pyobjc-framework-corelocation = "~11.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
